--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: João Pedro Picolo
 description: Take a look at my projects
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
